openshift/istio/staging-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: staging-gw
  namespace: staging
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8081
      name: http
      protocol: HTTP
    hosts:
    - "*.eu-de.containers.appdomain.cloud"
